full version decstop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <title>Nasrashvili Luka exem1</title>
+    <script
+      src="https://kit.fontawesome.com/yourcode.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="css/bootstrap.min.js"></script>
   </head>
   <body>
@@ -49,5 +53,250 @@
         <a href="#">Sell Somethin</a>
       </div>
     </nav>
+    <div class="large-imges">
+      <img src="img/2d00d82a61321f4b4a29438517abbb42.jpg" alt="large img" />
+    </div>
+    <div>
+      <div class="title-img">Find the house you want easily</div>
+    </div>
+    <div>
+      <div class="title-paragrap">
+        Buy, sell, rent or lease on just one platform
+      </div>
+    </div>
+    <div>
+      <div class="search">
+        <search>
+          <form>
+            <input name="fsrch" id="fsrch" placeholder="search" />
+          </form>
+        </search>
+      </div>
+    </div>
+    <div class="conteiner">
+      <h4>Location</h4>
+
+      <div class="burger">
+        <select name="user-country" id="user-country">
+          <option value="selected disabled">All Kenya</option>
+        </select>
+      </div>
+      <h5>Property</h5>
+
+      <input type="checkbox" id="house1" name="Apartments" value="Rent1" />
+      <label for="vehicle1">Houses & Apartments for Rent | 9548</label><br />
+
+      <input type="checkbox" id="house2" name="Apartments" value="sale1" />
+      <label for="vehicle2"> Houses & Apartments for Sale | 9548</label><br />
+
+      <input type="checkbox" id="Houses3" name="Apartments" value="rent2" />
+      <label for="vehicle2"> Land & Plots for Rent | 9548</label><br />
+
+      <input type="checkbox" id="house4" name="Apartments" value="sale3" />
+      <label for="vehicle1">Land & Plots for Sale| 9548</label><br />
+
+      <input type="checkbox" id="house5" name="Apartments" value="rent3" />
+      <label for="vehicle2">Commercial Property for Rent | 9548</label><br />
+
+      <input type="checkbox" id="Houses6" name="Apartments" value="sale3" />
+      <label for="vehicle2">Commercial Property for Sale | 9548</label><br />
+
+      <input type="checkbox" id="house7" name="Apartments" value="event" />
+      <label for="vehicle2">Event Centres, Venues & Worksta | 9548</label><br />
+
+      <input type="checkbox" id="Houses8" name="Apartments" value="property" />
+      <label for="vehicle2">Short Let Property | 9548</label><br />
+
+      <input type="checkbox" id="house9" name="Apartments" value="sale4" />
+      <label for="vehicle2">Land & Plots for Sale | 9548 </label><br />
+
+      <input type="checkbox" id="Houses10" name="Apartments" value="rent4" />
+      <label for="vehicle2">Commercial Property for Rent | 9548</label><br />
+      <h5>Price range</h5>
+
+      <input type="checkbox" id="Houses11" name="Apartments" value="ads" />
+      <label for="vehicle2">Under 13 K • 2183 ads</label><br />
+
+      <input type="checkbox" id="house12" name="Apartments" value="ads1" />
+      <label for="vehicle2">13 - 160 K • 2183 ads </label><br />
+
+      <input type="checkbox" id="Houses13" name="Apartments" value="ads2" />
+      <label for="vehicle2">160 K - 6 M • 2183 ads</label><br />
+
+      <input type="checkbox" id="house14" name="Apartments" value="ads3" />
+      <label for="vehicle2">6 - 55 M • 2183 ads</label><br />
+
+      <input type="checkbox" id="Houses15" name="Apartments" value="ads4" />
+      <label for="vehicle2">6 - 55 M • 2183 ads</label><br />
+    </div>
+
+    <section class="section-one">
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/804b0557885021d144d5021c4f5ef0fc.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/2d00d82a61321f4b4a29438517abbb42.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/5b210b19b933f95c6311a767b4618423.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/804b0557885021d144d5021c4f5ef0fc (1).jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-two">
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/5b210b19b933f95c6311a767b4618423 (1).jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/2d00d82a61321f4b4a29438517abbb42.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/5b210b19b933f95c6311a767b4618423 (1).jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="img/804b0557885021d144d5021c4f5ef0fc.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
+          <p class="card-text">Kajiado, Namanga</p>
+          <div class="frice">1450$ / Month</div>
+          <div class="card-line"></div>
+          <div class="content">
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+            <div>5 Bedroom</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="link-footer">
+        <a href="">home</a>
+        <a href="">discover</a>
+        <a href="">contact us</a>
+        <a href="">sing in</a>
+
+        <a class="support" href="">Support@Roberts.com</a>
+      </div>
+      <!--social medea link-->
+      <div class="social-media">
+        <a href="#">Facebook</a>
+        <a href="#">Facebook</a>
+        <a href="#">Facebook</a>
+        <a href="#">Facebook</a>
+      </div>
+      <div class="footer-line"></div>
+      <div class="copy">© 2022 Robert.co.ke Gibraltar</div>
+    </footer>
   </body>
 </html>
