add fonts and medea

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
     <title>Nasrashvili Luka exem1</title>
     <script
       src="https://kit.fontawesome.com/yourcode.js"
@@ -35,16 +36,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="internal.html">Discover</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">Contact us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <a class="nav-link disabled" aria-disabled="true">Sign in</a>
             </li>
           </ul>
         </div>
@@ -169,11 +172,13 @@
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img
-          src="img/5b210b19b933f95c6311a767b4618423.jpg"
-          class="card-img-top"
-          alt="..."
-        />
+        <a href="internal.html">
+          <img
+            src="img/5b210b19b933f95c6311a767b4618423.jpg"
+            class="card-img-top"
+            alt="img4"
+          />
+        </a>
         <div class="card-body">
           <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
           <p class="card-text">Kajiado, Namanga</p>
@@ -190,8 +195,9 @@
         <img
           src="img/804b0557885021d144d5021c4f5ef0fc (1).jpg"
           class="card-img-top"
-          alt="..."
+          alt="img3"
         />
+
         <div class="card-body">
           <h5 class="card-title">200 Acres Parcel for Sale in Namanga</h5>
           <p class="card-text">Kajiado, Namanga</p>
